fix(layout): lock body and wrapper on mobile screen to prevent bug with strange overflowing and scrolling

--- a/style.css
+++ b/style.css
@@ -22,11 +22,6 @@ html, body {
   height: 100%;
 }
 
-body {
-  overflow: hidden;
-  max-width: 100vw;
-}
-
 .wrapper {
   height: 100dvh;
   display: grid;
@@ -210,7 +205,17 @@ body {
 
 
 @media (max-width: 800px) {
+  body {
+    overflow: hidden;
+    max-width: 100vw;
+    position: relative;
+  }
+
   .wrapper {
+    overflow: hidden;
+    max-width: 100vw;
+    position: relative;
+    
     display: flex;
   }
   
